{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Normal",
            "id": "e3b58c58-642a-493e-9eb4-9adf0d2e72e4",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "77674e53-de58-46af-8019-94f5a0519a6a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "WalkToggle",
                    "type": "Button",
                    "id": "d50f44a3-a8c9-4d9a-b712-1b3bd9301f6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CombatMode",
                    "type": "Button",
                    "id": "89b1f2b6-f2a1-4fdb-8b8c-02b77c8be341",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "fb60cc98-2782-4135-984c-91ea3845808d",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "4cacdda3-5419-4c72-9177-0a8ae142c336",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c0311952-4052-45af-81c8-1e7ff74cd057",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ab6b0d49-81f0-4e7a-97b0-7349d0b57cb8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "65a16732-d6ab-492b-9fdb-a0a51d381659",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e5a6efa9-0a9a-43e9-94dc-f95c14f65e4c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a8f11dac-f4a0-441c-a0b4-d4874df9b7e6",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32ceca6e-9ef9-4a46-a39b-5792dbda5eb6",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CombatMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f530a40-33bb-421f-8396-14e667662baf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "gui",
            "id": "c7fb1273-4407-4adc-b261-93339f6e2a34",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "d730ede7-0c3c-4f98-809b-33143106071a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5a814239-e921-452d-ab87-c806389bb2c7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}